Busted builds/worker/checkouts/gecko/js/src/wasm/WasmOpIter.h:3138:8: error: no matching member function for call to 'checkIsSubtypeOf' - when Gecko 92 merges to Beta on 2021-08-09
Categories
(Core :: JavaScript: WebAssembly, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox90 | --- | unaffected |
firefox91 | --- | unaffected |
firefox92 | blocking | verified |
People
(Reporter: noemi_erli, Assigned: rhunt)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
[task 2021-07-17T11:26:32.490Z] 11:26:32 INFO - In file included from /builds/worker/checkouts/gecko/js/src/wasm/WasmBaselineCompile.cpp:152:
[task 2021-07-17T11:26:32.490Z] 11:26:32 ERROR - /builds/worker/checkouts/gecko/js/src/wasm/WasmOpIter.h:3138:8: error: no matching member function for call to 'checkIsSubtypeOf'
[task 2021-07-17T11:26:32.491Z] 11:26:32 INFO - if (!checkIsSubtypeOf(*rttSubTypeIndex, rttParentTypeIndex)) {
[task 2021-07-17T11:26:32.491Z] 11:26:32 INFO - ^~~~~~~~~~~~~~~~
[task 2021-07-17T11:26:32.491Z] 11:26:32 INFO - /builds/worker/checkouts/gecko/js/src/wasm/WasmBaselineCompile.cpp:14121:14: note: in instantiation of member function 'js::wasm::OpIter<js::wasm::BaseCompiler::BaseCompilePolicy>::readRttSub' requested here
[task 2021-07-17T11:26:32.492Z] 11:26:32 INFO - if (!iter_.readRttSub(¬hing, &rttSubTypeIndex)) {
[task 2021-07-17T11:26:32.492Z] 11:26:32 INFO - ^
[task 2021-07-17T11:26:32.493Z] 11:26:32 INFO - /builds/worker/checkouts/gecko/js/src/wasm/WasmOpIter.h:414:15: note: candidate function not viable: no known conversion from 'uint32_t' (aka 'unsigned int') to 'js::wasm::ValType' (aka 'PackedType<js::wasm::ValTypeTraits>') for 1st argument
[task 2021-07-17T11:26:32.494Z] 11:26:32 INFO - inline bool checkIsSubtypeOf(ValType actual, ValType expected);
[task 2021-07-17T11:26:32.495Z] 11:26:32 INFO - ^
[task 2021-07-17T11:26:32.496Z] 11:26:32 INFO - /builds/worker/checkouts/gecko/js/src/wasm/WasmOpIter.h:415:15: note: candidate function not viable: no known conversion from 'uint32_t' (aka 'unsigned int') to 'js::wasm::ResultType' for 1st argument
[task 2021-07-17T11:26:32.496Z] 11:26:32 INFO - inline bool checkIsSubtypeOf(ResultType params, ResultType results);
[task 2021-07-17T11:26:32.497Z] 11:26:32 INFO - ^
[task 2021-07-17T11:26:32.498Z] 11:26:32 INFO - 1 error generated.
[task 2021-07-17T11:26:32.499Z] 11:26:32 ERROR - make[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:693: Unified_cpp_js_src_wasm0.o] Error 1
[task 2021-07-17T11:26:32.500Z] 11:26:32 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/js/src/wasm'
[task 2021-07-17T11:26:32.501Z] 11:26:32 INFO - make[4]: *** Waiting for unfinished jobs....
Updated•3 years ago
|
Assignee | ||
Comment 1•3 years ago
|
||
Updated•3 years ago
|
Assignee | ||
Updated•3 years ago
|
Comment 3•3 years ago
|
||
bugherder |
Comment 4•3 years ago
|
||
Verified fixed with today's central-as-beta simulation.
Updated•3 years ago
|
Description
•