Bug 1721001 - wasm: Fix bustage due to missing ifdefs. r=yury

Differential Revision: https://phabricator.services.mozilla.com/D120382